// Vitest Snapshot v1

exports[`plugins/inlineChunk > should add InlineChunkHtmlPlugin properly by default 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "favicon": undefined,
        "filename": "html/main/index.html",
        "inject": true,
        "minify": false,
        "template": "<ROOT>/packages/builder/builder-webpack-provider/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlWebpackPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "tests": [
        /builder-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
    },
  ],
}
`;

exports[`plugins/inlineChunk > should use proper plugin options when disableInlineRuntimeChunk is true 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "favicon": undefined,
        "filename": "html/main/index.html",
        "inject": true,
        "minify": false,
        "template": "<ROOT>/packages/builder/builder-webpack-provider/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlWebpackPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "tests": [],
    },
  ],
}
`;

exports[`plugins/inlineChunk > should use proper plugin options when enableInlineScripts is true 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "favicon": undefined,
        "filename": "html/main/index.html",
        "inject": true,
        "minify": false,
        "template": "<ROOT>/packages/builder/builder-webpack-provider/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlWebpackPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "tests": [
        /\\\\\\.js\\$/,
        /builder-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
    },
  ],
}
`;

exports[`plugins/inlineChunk > should use proper plugin options when enableInlineStyles is true 1`] = `
{
  "entry": {
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "favicon": undefined,
        "filename": "html/main/index.html",
        "inject": true,
        "minify": false,
        "template": "<ROOT>/packages/builder/builder-webpack-provider/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlWebpackPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "tests": [
        /\\\\\\.css\\$/,
        /builder-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
    },
  ],
}
`;
